Fix for nav-bar going offscreen for high dpi monitor

--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
     grid-row-gap: 1em;
     position: fixed;
     width: 19vw;
+    max-height: 95vh;
     overflow-x: hidden;
 }
 
